--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>hello :D!</h1>
+	<h1>Demo Spring Boot deployed in Heroku!</h1>
 </body>
 </html>
